fixed warnings and use Java 11